# query.open223.info

./: .gitignore  Makefile  index.html  pyproject.toml  queries.toml
.github/workflows/: build-site.yml
compiled-models/: IBAL.ttl  doe-medium-office-ahu-vav.ttl  g36-extensions-dual-duct-terminal-unit-with-discharge-sensor.ttl  g36-extensions-dual-duct-terminal-unit-with-inlet-sensors.ttl  g36-extensions-multiple-zone-ahu.ttl  g36-extensions-parallel-fpu-constant-volume-fan.ttl  g36-extensions-parallel-fpu-variable-volume-fan.ttl  g36-extensions-vav-cooling-only.ttl  g36-extensions-vav-reheat.ttl  lbnl-example.ttl  nrel-example.ttl  pritoni-latest.ttl
models/: doe-medium-office-ahu-vav.ttl  lbnl-example.ttl  pritoni-latest.ttl
ontologies/: 223p.ttl  Brick.ttl
static/css/: site.css
static/js/: app.js  yasgui.min.js
templates/: index.html
tools/: compile-html.py  compile.py  gather-files.sh
