[tool.poetry]
name = "223p-web-sparql"
version = "0.1.0"
description = ""
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
license = "bsd-3-clause"

[tool.poetry.dependencies]
python = "^3.11"
ontoenv = "^0.3.9a1"
rdflib = "^7.0"
Jinja2 = "^3.1.1"
toml = "^0.10.2"
numpy = ">=1.26.0"
brickschema = "^0.7.3a10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
