[project]
name = "query-open223-info"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brickschema>=0.7.6a3",
    "jinja2>=3.1.4",
    "numpy>=2.2.2",
    "pyontoenv>=0.1.10a8",
    "rdflib>=7.0.0",
    "toml>=0.10.2",
]
